# parallel-trading

./: .gitignore  README.md  main.py  pyproject.toml
trading/: base.py  data.py  settings.py  utils.py
trading/algorithms/: __init__.py  base.py
trading/dataset/: __init__.py  base.py  indicators.py
trading/db/: base.py
trading/db/models/: base.py  tables.py
